# monolith-rs

./: .gitignore  unpack.config.ts
monolith-rs/: .gitignore  Cargo.toml  PARITY.md  PYTHON_PARITY_MASTER_PLAN.md  README.workspace.md
monolith-rs/.cargo/: config.toml
monolith-rs/crates/monolith-checkpoint/: Cargo.toml
monolith-rs/crates/monolith-checkpoint/src/: checkpointer.rs  export.rs  lib.rs  manager.rs  serialization.rs  state.rs
monolith-rs/crates/monolith-cli/: Cargo.toml
monolith-rs/crates/monolith-cli/src/: gflags_utils.rs  lib.rs  main.rs
monolith-rs/crates/monolith-cli/src/commands/: agent_service.rs  export.rs  mod.rs  serve.rs  tf_runner.rs  train.rs
monolith-rs/crates/monolith-cli/tests/: agent_service_cli.rs  gflags_utils_test.rs
monolith-rs/crates/monolith-core/: Cargo.toml
monolith-rs/crates/monolith-core/src/: base_embedding_host_call.rs  base_host_call.rs  base_layer.rs  base_model_params.rs  base_task.rs  dyn_value.rs  env.rs  error.rs  feature.rs  fid.rs  hyperparams.rs  lib.rs  mem_profiling.rs  model_imports.rs  model_registry.rs  nested_map.rs  optimizers.rs  params.rs  path_utils.rs  util.rs  utils.rs
monolith-rs/crates/monolith-data/: Cargo.toml
monolith-rs/crates/monolith-data/src/: batch.rs  compression.rs  dataset.rs  example.rs  feature_list.rs  feature_utils.rs  input.rs  instance.rs  interleave.rs  kafka.rs  lib.rs  negative_sampling.rs  parquet.rs  tfrecord.rs  transform.rs  utils.rs
monolith-rs/crates/monolith-data/tests/: proto_parity.rs  python_golden.rs
monolith-rs/crates/monolith-examples/: Cargo.toml
monolith-rs/crates/monolith-examples/src/: lib.rs
monolith-rs/crates/monolith-hash-table/: Cargo.toml
monolith-rs/crates/monolith-hash-table/src/: compressor.rs  cuckoo.rs  entry.rs  error.rs  eviction.rs  initializer.rs  lib.rs  multi.rs  traits.rs
monolith-rs/crates/monolith-layers/: Cargo.toml
monolith-rs/crates/monolith-layers/src/: activation.rs  activation_layer.rs  add_bias.rs  agru.rs  constraint.rs  dcn.rs  dense.rs  dien.rs  din.rs  dmr.rs  embedding.rs  error.rs  feature_cross.rs  feature_trans.rs  ffm.rs  group_interaction.rs  initializer.rs  layer.rs  lhuc.rs  lib.rs  logit_correction.rs  merge.rs  mixed_emb_op_comb_nws.rs  mlp.rs  mmoe.rs  normalization.rs  pooling.rs  regularizer.rs  senet.rs  snr.rs  tensor.rs
monolith-rs/crates/monolith-optimizer/: Cargo.toml
monolith-rs/crates/monolith-optimizer/src/: adadelta.rs  adagrad.rs  adam.rs  adamom.rs  amsgrad.rs  ftrl.rs  lib.rs  momentum.rs  monolith_rmsprop.rs  rmsprop.rs  sgd.rs
monolith-rs/crates/monolith-proto/: Cargo.toml  build.rs
monolith-rs/crates/monolith-proto/src/: descriptor_pool.rs  lib.rs  text_format.rs  util.rs
monolith-rs/crates/monolith-serving/: Cargo.toml
monolith-rs/crates/monolith-serving/src/: agent_controller.rs  agent_service.rs  agent_service_discovery.rs  agent_v3.rs  backends.rs  config.rs  constants.rs  data_def.rs  embedding_store.rs  error.rs  grpc.rs  grpc_agent.rs  inference.rs  lib.rs  mocked_tfserving.rs  model_loader.rs  model_manager.rs  parameter_sync.rs  parameter_sync_rpc.rs  parameter_sync_sink.rs  replica_manager.rs  resource_utils.rs  server.rs  tfs_client.rs  tfs_monitor.rs  tfs_wrapper.rs  tfserving.rs  tfserving_server.rs  utils.rs  zk_mirror.rs
monolith-rs/crates/monolith-serving/tests/: agent_controller_parity.rs  agent_service_parity.rs  agent_service_tonic.rs  agent_v3_parity.rs  backends_parity.rs  data_def_test.rs  mocked_tfserving_parity.rs  mocked_zkclient_parity.rs  model_manager_parity.rs  parameter_sync_rpc.rs  replica_manager_parity.rs  resource_utils_parity.rs  tfs_client_parity.rs  tfs_monitor_parity.rs  tfserving_model_service.rs  tfserving_predict.rs  utils_parity.rs  zk_mirror_parity.rs
monolith-rs/crates/monolith-tensor/: Cargo.toml
monolith-rs/crates/monolith-tensor/src/: candle_backend.rs  lib.rs  ndarray_backend.rs  ops.rs  shape.rs  tensor.rs
monolith-rs/crates/monolith-training/: Cargo.toml
monolith-rs/crates/monolith-training/src/: barrier.rs  base_embedding_task.rs  discovery.rs  distributed.rs  distributed_ps.rs  distributed_serving_ops.rs  entry.rs  estimator.rs  file_ops.rs  hooks.rs  lib.rs  metrics.rs  native_task_context.rs  parameter_sync_replicator.rs  prefetch_queue.rs  py_discovery.rs  run_config.rs  runner.rs  runner_utils.rs
monolith-rs/crates/monolith-training/src/native_training/: consul.rs  device_utils.rs  env_utils.rs  gen_seq_mask.rs  graph_meta.rs  graph_utils.rs  hvd_lib.rs  learning_rate_functions.rs  logging_ops.rs  mod.rs  nested_tensors.rs  ragged_utils.rs  save_utils.rs  service_discovery.rs
monolith-rs/crates/monolith-training/tests/: distributed_ps_parity.rs  distributed_serving_ops_parity.rs  file_ops_parity.rs  native_training_learning_rate_functions_parity.rs  native_training_parity.rs  native_training_save_utils_parity.rs  parameter_sync_end_to_end.rs  prefetch_queue_parity.rs  ps_training_rpc.rs  py_discovery_parity.rs  runner_utils_parity.rs
monolith-rs/examples/: basic_training.rs  data_pipeline.rs  distributed_training.rs  embedding_table.rs  grpc_client.rs  grpc_server.rs  layers_demo.rs  local_predictor.rs  model_export.rs  movie_ranking.rs
monolith-rs/proto/: parameter_sync.proto  parameter_sync_rpc.proto  ps_training.proto
monolith-rs/proto/idl/matrix/proto/: example.proto  feature.proto  line_id.proto
monolith-rs/proto/monolith/native_training/runtime/hash_table/compressor/: float_compressor.proto
monolith-rs/proto/monolith/native_training/runtime/hash_table/initializer/: initializer_config.proto
monolith-rs/proto/monolith/native_training/runtime/hash_table/optimizer/: optimizer.proto
monolith-rs/proto/xla/tsl/protobuf/: error_codes.proto  histogram.proto
monolith-rs/scripts/: cargo-auto-features.sh
task/: 00-discover-report.ai.tsx  00-discover-summary.ai.tsx  00-discover.ai.tsx  01-validate-inventory.ai.tsx  10-generate-mapping-table.ai.tsx  11-normalize-mapping.ai.tsx  12-agent-service-zk-mirror.ai.tsx  13-agent-service-tfs-client.ai.tsx  14-agent-service-replica-manager.ai.tsx  index.ai.tsx  (+107 more)
