[workspace]
resolver = "2"
# Only include actual Rust crates; this avoids accidentally treating build/test
# artifact folders (e.g. `crates/target`) as workspace members.
members = ["crates/monolith-*"]

# Root package for examples
[package]
name = "monolith-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Core crates (always available)
monolith-tensor = { path = "crates/monolith-tensor" }
monolith-layers = { path = "crates/monolith-layers" }
monolith-core = { path = "crates/monolith-core" }
monolith-hash-table = { path = "crates/monolith-hash-table" }
monolith-optimizer = { path = "crates/monolith-optimizer" }

# Proto-dependent crates (optional until proto issues are fixed)
monolith-checkpoint = { path = "crates/monolith-checkpoint", optional = true }
monolith-serving = { path = "crates/monolith-serving", optional = true }
monolith-data = { path = "crates/monolith-data", optional = true }
monolith-proto = { path = "crates/monolith-proto", optional = true }
monolith-training = { path = "crates/monolith-training", optional = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }

[features]
default = []
full = ["monolith-checkpoint", "monolith-serving", "monolith-data", "monolith-proto", "monolith-training"]
metal = ["monolith-tensor/metal"]
cuda = ["monolith-tensor/cuda"]

[dev-dependencies]
tempfile = { workspace = true }

[[example]]
name = "local_predictor"
path = "examples/local_predictor.rs"
required-features = ["full"]

[[example]]
name = "basic_training"
path = "examples/basic_training.rs"

[[example]]
name = "model_export"
path = "examples/model_export.rs"
required-features = ["full"]

[[example]]
name = "distributed_training"
path = "examples/distributed_training.rs"

[[example]]
name = "grpc_client"
path = "examples/grpc_client.rs"
required-features = ["full"]

[[example]]
name = "grpc_server"
path = "examples/grpc_server.rs"
required-features = ["full"]

[[example]]
name = "layers_demo"
path = "examples/layers_demo.rs"

[[example]]
name = "data_pipeline"
path = "examples/data_pipeline.rs"
required-features = ["full"]

[[example]]
name = "movie_ranking"
path = "examples/movie_ranking.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/user/monolith-rs"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
monolith-proto = { path = "crates/monolith-proto" }
monolith-core = { path = "crates/monolith-core" }
monolith-optimizer = { path = "crates/monolith-optimizer" }
monolith-hash-table = { path = "crates/monolith-hash-table" }
monolith-tensor = { path = "crates/monolith-tensor" }
monolith-layers = { path = "crates/monolith-layers" }
monolith-data = { path = "crates/monolith-data" }
monolith-training = { path = "crates/monolith-training" }
monolith-checkpoint = { path = "crates/monolith-checkpoint" }
monolith-serving = { path = "crates/monolith-serving" }
monolith-cli = { path = "crates/monolith-cli" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC and protobuf
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# Compression
flate2 = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"

# Collections
hashbrown = "0.14"

# Bytes
bytes = "1.5"

# Tensor backends
ndarray = { version = "0.15", features = ["rayon"] }
candle-core = "0.8"
candle-nn = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing
criterion = "0.5"
tempfile = "3.10"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Numeric types
half = "2.4"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
