[package]
name = "monolith-checkpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Checkpoint serialization and model export for Monolith"

[dependencies]
monolith-proto = { workspace = true }
monolith-core = { workspace = true }
monolith-hash-table = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
flate2 = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
