[package]
name = "monolith-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line tools for Monolith"

[[bin]]
name = "monolith"
path = "src/main.rs"

[dependencies]
monolith-training = { workspace = true }
monolith-serving = { workspace = true }
monolith-checkpoint = { workspace = true }
monolith-data = { workspace = true }
monolith-proto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Enable Consul/ZooKeeper discovery variants in `monolith train`.
consul = ["monolith-training/consul"]
zookeeper = ["monolith-training/zookeeper"]
