[package]
name = "monolith-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits, types, and feature abstractions for Monolith"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
