[package]
name = "monolith-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data pipeline, parsing, and datasets for Monolith"

[dependencies]
monolith-proto = { workspace = true }
monolith-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
flate2 = { version = "1.0", optional = true }
snap = { version = "1.1", optional = true }
parquet = { version = "54.0", optional = true, default-features = false, features = ["arrow"] }
arrow = { version = "54.0", optional = true, default-features = false }
glob = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
parquet = ["dep:parquet", "dep:arrow", "dep:glob"]
kafka = []
snappy = ["snap"]
gzip = ["flate2"]
compression = ["snappy", "gzip"]
