[package]
name = "monolith-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example applications for Monolith-RS"
publish = false

[dependencies]
monolith-proto = { workspace = true }
monolith-data = { workspace = true, features = ["compression"] }
monolith-hash-table = { workspace = true }
monolith-layers = { workspace = true }
monolith-training = { workspace = true, optional = true }
monolith-optimizer = { workspace = true }
prost = { workspace = true }

# CLI/runtime/logging used by demo/benchmark binaries.
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Technical analysis indicators
ta = "0.5"
ta-lib-sys = { version = "0.1.2", optional = true }

# Parallel processing
rayon = { workspace = true }
num_cpus = "1.16"

[features]
default = ["talib"]
training = ["dep:monolith-training"]
metal = ["monolith-layers/metal"]
cuda = ["monolith-layers/cuda"]
talib = ["dep:ta-lib-sys"]

[[bin]]
name = "stock_prediction"
path = "src/bin/stock_prediction.rs"

[[bin]]
name = "stream_training"
path = "src/bin/stream_training.rs"

[[bin]]
name = "embedding_table"
path = "src/bin/embedding_table.rs"

[[bin]]
name = "data_pipeline"
path = "src/bin/data_pipeline.rs"

[[bin]]
name = "demo_train"
path = "src/bin/demo_train.rs"
required-features = ["training"]

[[bin]]
name = "distributed_ps_benchmark"
path = "src/bin/distributed_ps_benchmark.rs"
required-features = ["training"]

[[bin]]
name = "distribution_ops_benchmark"
path = "src/bin/distribution_ops_benchmark.rs"
required-features = ["training"]

[[bin]]
name = "hash_table_ops_benchmark"
path = "src/bin/hash_table_ops_benchmark.rs"
