[package]
name = "monolith-hash-table"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hash table implementations for embedding storage"

[dependencies]
monolith-core = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
half = { workspace = true }
