[package]
name = "monolith-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedding optimizers for Monolith (SGD, Adam, Adagrad, FTRL, RMSprop)"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
