[package]
name = "monolith-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generated protobuf and gRPC code for Monolith"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, optional = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }

[features]
default = ["grpc"]
grpc = []
serde = ["dep:serde"]
