[package]
name = "monolith-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generated protobuf and gRPC code for Monolith"

[lib]
doctest = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
prost-reflect = { workspace = true, features = ["text-format"] }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3"

[features]
default = ["grpc"]
grpc = []
