[package]
name = "monolith-serving"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC serving infrastructure for Monolith"

[dependencies]
monolith-proto = { workspace = true }
monolith-core = { workspace = true }
monolith-hash-table = { workspace = true }
monolith-layers = { workspace = true }
monolith-checkpoint = { workspace = true }
monolith-tensor = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["grpc"]
grpc = []
