[package]
name = "monolith-serving"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC serving infrastructure for Monolith"

[dependencies]
monolith-proto = { workspace = true }
monolith-tensor = { workspace = true }
monolith-data = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
base64 = "0.22"
sysinfo = "0.30"
regex = { workspace = true }
tempfile = { workspace = true }
md5 = "0.7"
glob = { workspace = true }

[dev-dependencies]

[features]
default = ["grpc"]
grpc = []
