[package]
name = "monolith-training"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Training orchestration and distributed PS for Monolith"

[features]
default = []
zookeeper = ["dep:zookeeper-client"]
consul = ["dep:rs-consul"]

[dependencies]
monolith-proto = { workspace = true }
monolith-serving = { workspace = true }
monolith-hash-table = { workspace = true }
monolith-core = { workspace = true }
monolith-data = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
parking_lot = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
glob = { workspace = true }
base64 = "0.22"
tokio-stream = { workspace = true, features = ["net"] }

# Optional dependencies for remote discovery backends.
zookeeper-client = { version = "0.11", optional = true, features = ["tokio"] }
rs-consul = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
monolith-optimizer = { workspace = true }
itertools = "0.12"
